# markup-parser

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
src/: lib.rs
src/markup_parser/: __init__.py  parser.py
src/test/: test_with_prefix.html  test_with_prefix.py  test_without_prefix.html  test_without_prefix.py
