[package]
name = "markup_parser"
version = "0.1.0"
authors = ["Aleskandr Sokolov <bigpewm@gmail.com>"]


[lib]
name = "markup_parser"
crate-type = ["cdylib"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-rust"]

[dependencies]
reqwest = { version="0.11.3", features=['blocking', 'json'] }
scraper = "0.12.0"
jstime_core = "0.28.1"
pyo3 = { version = "0.13.2", features = ["extension-module"] }
