# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = markup-parser
version = file: VERSION
author = Aleskandr Sokolov
author_email = bigpewm@gmail.com
url = https://github.com/bigpe/markup-parser
description = Parse JS variables from HTML markup
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = html, parse, markup, js, variables, rust
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6.0
setup_requires =
    setuptools
    wheel
package_dir =
    markup_parser=src/markup_parser
    tests=src/test
packages =
    markup_parser

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

